<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_self_assesment"
            android:title="@string/menu_self_assesment" />
        <item
            android:id="@+id/nav_personlized_plans"
            android:title="@string/menu_personalized_plans" />
        <item
            android:id="@+id/nav_tracker_logs"
            android:title="@string/menu_tracker_logs" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help_desk"
            android:title="@string/menu_help_desk" />
        <!--<item
            android:id="@+id/nav_sign_out"
            android:title="@string/menu_sign_out" />-->
    </group>
</menu>